<resources>
    <string name="app_name">AndroidObligatorisk</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="Building_overview">Building</string>
    <string name="Login_button">Login</string>
    <string name="To_Buildings_Button">Buildings</string>
    <string name="UserId">UserId:</string>
    <string name="FromTime">Reserved from:</string>
    <string name="ToTime">Reserved to:</string>
    <string name="Purpose">Purpose:</string>
    <!-- Calender strings -->
    <string name="current_date">June, 2016</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>
    <string name="Sign_out">Sign Out</string>
    <string name="LoggedInAs">Logged in as:</string>
    <string name="AvailableRooms">Existing Reservations</string>
    <string name="Reservations">Reservations</string>
    <string name="Make_Reservation">Make Reservation</string>
    <string name="Reserve">Reserve</string>
    <string name="ToMyReservations">My Reservations</string>
    <string name="DeleteBtn">Delete</string>
    <string name="com.example.nikol.androidobligatorisk"></string>


</resources>
